--- a/packages/authentication_repository/pubspec.yaml
+++ b/packages/authentication_repository/pubspec.yaml
@@ -1,12 +1,15 @@
 name: authentication_repository
 description: Dart package which manages the authentication domain.
 version: 0.0.1
-homepage:
+publish_to: none
 
 environment:
   sdk: ">=2.16.2 <3.0.0"
 
 dependencies:
+  cache:
+    path: ../cache
+  equatable: ^2.0.3
   flutter:
     sdk: flutter
 
