--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.my_wallet">
    <application
-        android:label="my_wallet"
+        android:label="flutter_starterpack_w_bloc"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
