--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   equatable: ^2.0.3
   authentication_repository:
     path: packages/authentication_repository
+  product_repository:
+    path: packages/product_repository
+  location_repository: 
+    path: packages/location_repository
 
 dev_dependencies:
   bloc_test: ^9.0.0
@@ -64,9 +68,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icons/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
