--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.my_wallet">
+    package="com.example.mbiz">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
    <application
         android:label="flutter_starterpack_w_bloc"
         android:name="${applicationName}"
